# video-creator

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  instruction.md  package.json  patterns.md  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json
.claude/: settings.local.json
apps/server/: .env.example  README.md  package.json  pyproject.toml
apps/server/server/: __init__.py  __main__.py  main.py  runtime_status.py  settings.py
apps/server/server/adapters/: __init__.py
apps/server/server/adapters/ai/: __init__.py  base.py
apps/server/server/db/: app_db.py  migrations.py  project_configs.py  projects.py  renders.py
apps/server/server/domain/: project.py  timing.py
apps/server/server/pipeline/: cache.py  chunker.py  clip_render.py  filtergraph.py  render.py  render_manifest.py  render_progress.py  srt.py  transcribe.py
apps/server/server/routes/: alignment.py  media.py  projects.py  render.py  setup.py  uploads.py  ws.py
apps/server/tests/: conftest.py  test_ai_provider_adapter.py  test_alignment_integration.py  test_alignment_subtitles.py  test_app_db.py  test_audio_endpoint.py  test_backend_global_acceptance.py  test_chunker.py  test_clip_cache.py  test_filtergraph.py  test_health.py  test_layers_endpoint.py  test_media_upload.py  test_project_load.py  test_project_schema.py  test_projects_route.py  test_render_endpoint.py  test_render_history.py  test_render_manifest.py  test_render_performance.py  test_render_progress.py  test_setup_route.py  test_setup_test01_fixture.py  test_shared_api_schemas.py  test_srt.py  test_transcribe.py
(+362 files in other folders)
