[project]
name = "vc-server"
version = "0.1.0"
description = "Video Creator backend (FastAPI sidecar)."
requires-python = "==3.11.*"
readme = "README.md"
dependencies = [
  "fastapi>=0.115,<0.120",
  "uvicorn[standard]>=0.32,<0.40",
  "websockets>=13,<15",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "structlog>=24.0,<26.0",
  "python-multipart>=0.0.18,<0.1",
  "ffmpeg-python>=0.2,<0.3",
  "soundfile>=0.12,<0.14",
  "numpy>=1.26,<3.0",
  "nltk>=3.9,<4.0",
]

[project.optional-dependencies]
ml = [
  "torch>=2.6",
  "torchaudio>=2.6",
  "whisperx>=3.1",
]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.7,<1.0",
  "mypy>=1.13,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/", "build/"]
